block shortcode z-index bugfix

--- a/src/common.scss
+++ b/src/common.scss
@@ -93,6 +93,10 @@ div[data-type="c9-blocks/c9-custom-heading"].wp-block.is-selected .editor-block-
 		z-index: 20;
 	}
 
+	.editor-block-list__side-inserter.block-editor-block-list__side-inserter .editor-inserter-with-shortcuts.block-editor-inserter-with-shortcuts {
+		z-index: 22;
+	}
+
 	.block-editor-block-list__block .block-editor-block-contextual-toolbar {
 		z-index: 18;
 	}
